--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <div class="formbold-main-wrapper">
         <div class="container">
-        <video controls src="video.mp4" id="myVideo" style="height: 350px;"></video>
+        <!-- video controls src="video.mp4" id="myVideo" style="height: 350px;"></video -->
+        <video controls src="https://dc772.4shared.com/img/tK8xBg1tfa/b70a4f51/dlink__2Fdownload_2FtK8xBg1tfa_3Fsbsr_3D4fdccd8e14a4e0ee5cada988084fc71bb1f_26bip_3DMTg5LjIxNy44NS4yNTM_26lgfp_3D20_26bip_3DMTg5LjIxNy44NS4yNTM_26bip_3DMTg5LjIxNy44NS4yNTM/preview.mp4" id="myVideo" style="height: 350px;"></video>
         <label class="formbold-form-label">
             Before you begin your application, we invite you to watch a short video that will give you a glimpse into our company culture. We believe that talent comes in many forms. Whether you have years of experience or are just starting out, we want to hear from you! Our diverse team is made up of individuals from all backgrounds and walks of life. So don't hold back - apply today and let us discover your unique skills and potential. We can't wait to learn more about you and how you can contribute to our mission.
         </label>
