--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             </div>
                         </div>
                         I agree to the defined
-                        <a href="terms.html"> terms, conditions, and policies</a>
+                        <a href="terms"> terms, conditions, and policies</a>
                     </label>
                 </div>
 
